# wheelchair

./: .gitignore  .gitmessage  .gitmodules  README.md  wheelchair.urdf
Sketchbook/: wheelchair_kangaroo.ino
devel/: .catkin  .rosinstall  setup.sh
devel/lib/hls_lfcd_lds_driver/: hlds_laser_publisher  hlds_laser_segment_publisher
devel/lib/pkgconfig/: hls_lfcd_lds_driver.pc  motion.pc  wheelchair_description.pc
devel/share/hls_lfcd_lds_driver/cmake/: hls_lfcd_lds_driverConfig.cmake
devel/share/motion/cmake/: motionConfig.cmake
devel/share/wheelchair_description/cmake/: wheelchair_descriptionConfig.cmake
src/dependencies/face_recognition_ros_wrapper/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
src/dependencies/face_recognition_ros_wrapper/config/: params.yaml
src/dependencies/face_recognition_ros_wrapper/launch/: live_face_recognition_from_webcam.launch  (+2 more)
src/dependencies/laser_filters/: CMakeLists.txt
src/motion/: CMakeLists.txt  package.xml
src/motion/src/: mover.py
src/wheelchair_cartographer/: CMakeLists.txt  package.xml
src/wheelchair_cartographer/config/: simulation.lua  wheelchair_ekf.yaml  wheelchair_lds_2d.lua  wheelchair_lds_2d_simulation.lua
src/wheelchair_cartographer/launch/: cartographer.launch  gmapping.launch  hw_cartographer.launch  sim_cartographer.launch
src/wheelchair_cartographer/maps/: gmap.pgm  gmap.yaml  gmap1.pgm  gmap1.yaml  gmap_lab_test.pgm  gmap_lab_test.yaml  hospital.pgm  hospital.yaml  lab_rrc.pgm  lab_rrc.yaml  lab_test2.pgm  lab_test2.yaml  lab_test3.pgm  lab_test3.yaml
src/wheelchair_cartographer/rviz/: cartographer.rviz
src/wheelchair_cartographer/src/: flat_world_imu_node.cpp
src/wheelchair_control/: CMakeLists.txt  README.md  kangaroo_settings.tooth  package.xml  sabertooth_settings.tooth  setup.py
src/wheelchair_control/launch/: hw_control.launch
src/wheelchair_control/src/: mover.py
src/wheelchair_description/: CMakeLists.txt  package.xml
src/wheelchair_description/launch/: display.launch  gazebo.launch
src/wheelchair_description/rviz/: urdf.rviz
src/wheelchair_description/src/: robot_teleop_key  teleop.py
src/wheelchair_description/urdf/: _d435.gazebo.xacro  _d435.xacro  common_properties.xacro  links_joints.xacro  wheelchair.urdf  wheelchair.xacro  wheelchair_gazebo.xacro
src/wheelchair_navigation/: CMakeLists.txt  package.xml
src/wheelchair_navigation/launch/: amcl.launch  hw_robot_navigation.launch  navigation_nodes.launch  robot_navigation.launch
src/wheelchair_navigation/param/: amcl.yaml  costmap_common_params.yaml  dwb_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  prohibition_areas.yaml
src/wheelchair_navigation/rviz/: wheelchair_navigation.rviz
src/wheelchair_navigation/scripts/: Voice_NLP.py  talker.py
src/wheelchair_navigation/src/: max_velocity_calculator.cpp  odom_publisher.cpp
src/wheelchair_simulation/: CMakeLists.txt  package.xml
src/wheelchair_simulation/launch/: hospital_world.launch
src/wheelchair_simulation/src/: robot_teleop_key  teleop.py
src/wheelchair_simulation/worlds/: hospital.world
(+56 files in other folders)
